# udemy-gui-cpp-imgui

./: .gitignore  CMakeLists.txt  README.md
01_FileExplorer/: .gitignore  CMakeLists.txt
02_Plotter/src/: render.cpp
03_TextEditor/: CMakeLists.txt
03_TextEditor/src/: render.cpp  render.hpp
04_DiffViewer/src/: render.hpp
05_Paint/: CMakeLists.txt
05_Paint/src/: render.cpp  render.hpp
06_Calendar/: CMakeLists.txt
06_Calendar/src/: render.hpp
07_CsvTool/: CMakeLists.txt
07_CsvTool/src/: render.hpp
08_WallClock/: CMakeLists.txt
08_WallClock/src/: render.hpp
FileExplorer/: CMakeLists.txt
FileExplorer/src/: render.cpp  render.hpp
Plotter/: CMakeLists.txt
Plotter/src/: render.hpp
docs/: notes.txt
